<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">mobileonepwd</string>
    <string name="hello">Hello World, Date!</string>
    <string name="strInputAccHint">输入手机号</string>
    <string name="strAccInputLabel">手机号</string>
    <string name="strPswInputLabel">密  码</string>
    <string name="strSecPswInputLabel">二次密码</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="cancle">取 消</string>
    <string name="log_off">注 销</string>
    <string name="account_empty">用户名为空，请重新输入！</string>
    <string name="pwd_empty">密码为空，请重新输入！</string>
    <string name="register_fail">注册用户失败，请重新尝试！</string>
    <string name="register_sucess">注册成功！</string>
    <string name="login_sucess">登陆成功！</string>
    <string name="login_fail">登陆失败！请输入正确的用户名与密码！</string>
    <string name="add_new">添加新网站</string>
    <string name="name_already_exist">用户名：<xliff:g id="id1" example="tom">%1$s</xliff:g>已存在，请重新输入！</string>
    <string name="user_login_sucess">用户：<xliff:g id="id2" example="tom">%1$s</xliff:g>登录，欢迎光临！</string>
</resources>
