<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/login_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15.0px"
            android:layout_marginRight="15.0px"
            android:layout_marginTop="62.0px"
            android:paddingBottom="10.0px"
            android:paddingTop="21.0px" >

        <EditText
                android:id="@+id/register_edit_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5.0px"
                android:layout_marginLeft="5.0dip"
                android:layout_marginTop="5.0dip"
                android:inputType="number"
                android:maxLength="11"
                android:paddingLeft="65.0sp"
                android:saveEnabled="true" />

        <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/register_edit_account"
                android:layout_alignLeft="@+id/register_edit_account"
                android:layout_alignTop="@+id/register_edit_account"
                android:layout_marginRight="15.0sp"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strAccInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

        <EditText
                android:id="@+id/register_edit_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/register_edit_account"
                android:layout_alignRight="@+id/register_edit_account"
                android:layout_below="@+id/register_edit_account"
                android:layout_marginRight="1.0dip"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="65.0sp"
                android:saveEnabled="true" />

        <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/register_edit_pwd"
                android:layout_alignLeft="@+id/register_edit_account"
                android:layout_alignTop="@+id/register_edit_pwd"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strPswInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

        <EditText
                android:id="@+id/register_edit_secpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/register_edit_account"
                android:layout_centerInParent="true"
                android:layout_alignRight="@+id/register_edit_account"
                android:layout_below="@+id/register_edit_pwd"
                android:layout_marginRight="1.0dip"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="65.0sp"
                android:saveEnabled="true" />

        <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/register_edit_secpwd"
                android:layout_alignLeft="@+id/register_edit_account"
                android:layout_alignTop="@+id/register_edit_secpwd"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strSecPswInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

        <Button
                android:id="@+id/register_btn_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_edit_secpwd"
                android:layout_marginBottom="5.0px"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="5.0dip"
                android:text="@string/register" />


    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/login_success_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15.0px"
            android:layout_marginRight="15.0px"
            android:layout_marginTop="62.0px"
            android:paddingBottom="10.0px"
            android:paddingTop="21.0px"
            android:visibility="gone" >

        <TextView
                android:id="@+id/login_success_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="#ff3f3f3f"
                android:textSize="20.0dip" />
    </RelativeLayout>

</LinearLayout>