<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    android:id="@+id/loginRoot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/default_bg_hdpi"
    android:orientation="vertical" >

    <RelativeLayout
            android:id="@+id/login_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15.0px"
            android:layout_marginRight="15.0px"
            android:layout_marginTop="62.0px"
            android:paddingBottom="10.0px"
            android:paddingTop="21.0px" >

        <EditText
                android:id="@+id/login_edit_accountt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5.0px"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="5.0dip"
                android:inputType="number"
                android:maxLength="11"
                android:hint="@string/strAccInputLabel"
                android:saveEnabled="true"/>

        <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/login_edit_accountt"
                android:layout_alignLeft="@+id/login_edit_accountt"
                android:layout_alignTop="@+id/login_edit_accountt"
                android:layout_marginRight="15.0sp"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strAccInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip"
                android:visibility="invisible"/>

        <EditText
                android:id="@+id/login_edit_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/login_edit_accountt"
                android:layout_alignRight="@+id/login_edit_accountt"
                android:layout_below="@+id/login_edit_accountt"
                android:layout_marginRight="1.0dip"
                android:inputType="textPassword"
                android:maxLength="16"
                android:hint="@string/strPswInputLabel"
                android:saveEnabled="true" />

        <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/login_edit_pwd"
                android:layout_alignLeft="@+id/TextView01"
                android:layout_alignTop="@+id/login_edit_pwd"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strPswInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip"
                android:visibility="invisible"/>

        <Button
                android:id="@+id/login_btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_edit_pwd"
                android:layout_marginBottom="5.0px"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="5.0dip"
                android:text="确 定" />

        <Button
                android:id="@+id/login_btn_login_please"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_edit_pwd"
                android:layout_marginBottom="5.0px"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="5.0dip"
                android:text="@string/login" />

        <Button
                android:id="@+id/login_btn_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_btn_login"
                android:layout_marginBottom="5.0px"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="5.0dip"
                android:text="@string/register" />


    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/login_success_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15.0px"
            android:layout_marginRight="15.0px"
            android:layout_marginTop="62.0px"
            android:paddingBottom="10.0px"
            android:paddingTop="21.0px"
            android:visibility="gone" >

        <TextView
                android:id="@+id/login_success_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="#ff3f3f3f"
                android:textSize="20.0dip" />
    </RelativeLayout>


</LinearLayout>

